# Faustus

./: .gitignore  README.md  docker-compose-dertutor-dev.yml  docker-compose-dev.yml  docker-compose-index-dev.yml  package-lock.json  ruff.toml
Source/: AppDelegate.swift  Info.plist
Source/Base.lproj/: Main.storyboard
Source/extensions/: ArrayExtension.swift  Color++.swift  ColorExtension.swift  Font++.swift  FontExtension.swift  NSColorExtension.swift  NSRegularExpressionExtension.swift  View++.swift  (+5 more)
dertutor-api/: .dockerignore  alembic.ini  pyproject.toml  ruff.toml
dertutor-api/alembic/: env.py
dertutor-api/migrations/: env.py
dertutor-api/migrations/versions/: 171363f50b8b_creating_foreign_constraints.py  2022dfb5582c_creating_foreign_constraints.py  28495cac4168_creating_foreign_constraints.py  511395e12410_creating_tables.py  52b2fbf7308e_creating_tables.py  940fff0fde75_creating_tables.py  a40b0ee329b9_creating_tables.py  c0b0fc3167db_creating_foreign_constraints.py
dertutor-api/src/: config.py  context.py  main.py  routes.py
dertutor-api/src/core/database/: JsonFileDB.py  KeyValueDB.py  __init__.py
dertutor-api/src/repo/: __init__.py  database.py  model.py  repo.py  service.py
dertutor-api/src/routes/: corpus.py  langs.py  media.py  notes.py  resources.py  tags.py  vocabularies.py  vocs.py
dertutor-web/: index.html  package.json
index-api/: Dockerfile  pyproject.toml  ruff.toml
index-api/src/: grep.py  main.py
index-api/src/index/: db.py  routes.py  schemas.py
index-web/: Dockerfile  package.json  tsconfig.json
utils/: replace.py
(+263 files in other folders)
