[project]
name = "dertutor-api"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "alembic>=1.17.1",
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.14",
    "greenlet>=3.2.4",
    "orjson>=3.11.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "autopep8>=2.3.2",
    "ruff>=0.12.9",
]

# ignore annoying pylance warnings
# [tool.pyright]
# typeCheckingMode = "on"
# ignore = ["*"]
