[project]
name = "index-api"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "isort>=7.0.0",
    "path>=17.1.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "autopep8>=2.3.2",
]

# ignore annoying pylance warnings
[tool.pyright]
#typeCheckingMode = "off"
#ignore = ["*"]
